initial app runs

--- a/useful_stuff.rdoc
+++ b/useful_stuff.rdoc
@@ -81,4 +81,29 @@ add index manually:
 
   rails generate migration add_author_and_area_to_business_processes created_by:integer updated_by:integer area:string
 
-  .
+== Gem Installation
+
+Gems have been installed in the following way. (Need not be done for deployment!)
+
+* Twitter Bootstrap
+   rails g bootstrap:install                      # Installation of Twitter Bootstrap
+   rails g bootstrap:layout application fluid     # Generates fluid application.html.erb layout
+
+* Cancan
+   rails g cancan:ability
+
+* Devise
+   rails generate devise:install
+   rails generate devise:views
+   rails generate devise user
+   rake db:migrate
+
+You have to comment out
+  # devise_for :users
+in +config/routes.rb+ to be able to successfully scaffold
+  rails g scaffold User --migration=false
+
+  rails g bootstrap:themed Users
+
+* Simpleform
+   rails generate simple_form:install --bootstrap
