--- a/useful_stuff.rdoc
+++ b/useful_stuff.rdoc
@@ -43,7 +43,7 @@ Several Changes are necessary for the correct pluralalization of a model with a 
 
   rails g migration add_ancestry_to_users ancestry:string
 add index manually:
-  add_index users, :ancestry
+  add_index :users, :ancestry
 
   rails generate migration add_description_to_role_in_company description:text
   rails generate migration add_description_to_function description:text
@@ -110,3 +110,7 @@ in +config/routes.rb+ to be able to successfully scaffold
 
 * Textile Editor Helper
   rails g textile_editor_helper:install
+
+* Paper Trail:
+  bundle exec rails generate paper_trail:install
+  rails generate migration add_object_changes_to_versions object_changes:text
