--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -228,6 +228,8 @@ en:
       default: ! '%a, %d %b %Y %H:%M:%S %z'
       long: ! '%B %d, %Y %H:%M'
       short: ! '%d %b %H:%M'
+      timestamp: '%m/%m/%y - %H:%M'
+      id: '%d%m%y%H%M%S'
     pm: pm
   # remove these aliases after 'activemodel' and 'activerecord' namespaces are removed from Rails repository
   activemodel:
@@ -240,6 +242,9 @@ en:
       assignment:
         one: Assignment
         other: Assignments
+      business_process:
+        one: Business Process
+        other: Business Processes
       company:
         one: Company
         other: Companies
