--- a/useful_stuff.rdoc
+++ b/useful_stuff.rdoc
@@ -5,28 +5,29 @@
 3. Bootstrap: <tt>rails g bootstrap:themed Resources</tt>
 4. Abilty: <tt>models/abilty.rb</tt>
 5. Translation: <tt>confilg/locales/en.yml</tt>
-6. Menu: <tt>sidebars/process.html.erb</tt>
+6. Menu: <tt>sidebars/administration.html.erb</tt>
 7. Controller
-8. Model <tt>app/models/company.rb</tt>
+8. Model <tt>app/models/company.rb</tt> Versions?
 9. Form (description => textile, company => not editable)
 10. Show
 11. Index
 
-== Old Generators
-
-not used for this app, but maybe handy:
+== Generators
 
   rails generate migration add_fields_to_user firstname:string lastname:string function_id:integer role_in_company_id:integer deputy_id:integer parent_id:integer department_id:integer company_id:integer
-
-  rails generate scaffold Substitution user_id:integer deputy_id:integer
   rails generate scaffold Company name:string
-  rails generate scaffold Function name:string company_id:integer
-  rails generate scaffold Department name:string company_id:integer
-  rails generate scaffold RoleInCompany name:string company_id:integer
+  rails generate scaffold Employment user_id:integer company_id:integer
+  rails g migration add_ancestry_to_users ancestry:string
+add index manually:
+  add_index :users, :ancestry
+  rails generate migration add_object_changes_to_versions object_changes:text
+
+////////////////////////////
+  rails generate scaffold BusinessProcess company_id:integer created_by:integer name:string description:text
+///////////////////////////
 
 === Pluralization
 Several Changes are necessary for the correct pluralalization of a model with a name like RoleInCompany:
-
 <tt>nano role_in_company.rb</tt>
   set_table_name "roles_in_company"
 <tt>nano config/initializers/infelctions.rb</tt>
@@ -34,52 +35,6 @@ Several Changes are necessary for the correct pluralalization of a model with a 
   inflect.irregular 'role_in_company', 'roles_in_company'
 <tt>nano user.rb</tt>
   has_and_belongs_to_many :roles_in_company, :join_table => "roles_in_company_users"
-
-=== More Generators
-  rails generate migration create_functions_users #migration has to be written manually
-  rails generate migration create_roles_in_company_users #migration has to be written manually
-  rails generate scaffold Employment user_id:integer company_id:integer
-  rails generate scaffold DepartmentAffiliation user_id:integer department_id:integer
-
-  rails g migration add_ancestry_to_users ancestry:string
-add index manually:
-  add_index :users, :ancestry
-
-  rails generate migration add_description_to_role_in_company description:text
-  rails generate migration add_description_to_function description:text
-  rails generate scaffold UserRoleInCompanyAssignment user_id:integer role_in_company_id:integer
-  rails generate scaffold UserFunctionAssignment user_id:integer function_id:integer
-  rails generate migration DropOldRelationTables
-  rails generate migration add_company_id_to_substitution company_id:integer
-  rails generate migration add_company_id_to_department_affiliation company_id:integer
-  rails generate migration add_company_id_to_user_function_assignment company_id:integer
-  rails generate migration add_company_id_to_user_role_in_company_assignment company_id:integer
-
-=== Processes ....
-
-  rails generate scaffold ProcessClass name:string company_id:integer description:text
-  rails generate scaffold Note name:string company_id:integer description:text
-  rails generate scaffold Document name:string company_id:integer description:text internal:boolean
-  rails generate scaffold ProcessIndicator name:string company_id:integer metering_point:string value:string unit:string nominal_value:string operator:string description:text
-  rails generate scaffold BusinessProcess name:string company_id:integer parent_id:integer ancestry:string purpose:string number:string owner_id:integer aims:string process_class_id:integer description:text
-
-  rails generate scaffold BusinessProcessNoteAssignment business_process_id:integer note_id:integer company_id:integer
-  rails generate scaffold BusinessProcessDocumentAssignment business_process_id:integer document_id:integer company_id:integer
-  rails generate scaffold BusinessProcessProcessIndicatorAssignment business_process_id:integer process_indicator_id:integer company_id:integer
-  rails generate scaffold BusinessProcessDepartmentAssignment business_process_id:integer department_id:integer company_id:integer
-
-  rails generate migration add_coordinates_to_business_process x:integer y:integer
-  rails generate migration add_color_to_process_class color:string
-
-  rails generate migration add_fields_to_note duration:string location:string medium:string archiving:string
-  rails generate migration add_fields_to_function tasks:text responsibilities:text skills:text goals:text authorities:text
-  rails generate migration add_comments_to_function comments:text
-
-  rails generate migration add_object_changes_to_versions object_changes:text
-
-  rails generate scaffold News name:string description:text
-
-  rails generate migration add_author_and_area_to_business_processes created_by:integer updated_by:integer area:string
 
 == Gem Installation
 
