--- a/useful_stuff.rdoc
+++ b/useful_stuff.rdoc
@@ -24,6 +24,12 @@ add index manually:
 
 ////////////////////////////
   rails generate scaffold BusinessProcess company_id:integer created_by:integer name:string description:text
+  rails generate scaffold Step name:string company_id:integer created_by:integer process_id:integer step_model_id:string step_action_id:string
+  rails generate scaffold StepModel name:string
+  rails generate scaffold StepAction name:string step_model_id:integer
+  rails generate scaffold OutgoingArrow step_id:integer successor_id:integer
+  rails generate migration add_company_id_to_outgoing_arrows company_id:integer
+  rails generate migration change_process_id_in_steps
 ///////////////////////////
 
 === Pluralization
