first running process

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -10,6 +10,7 @@ en:
   deputies: Deputies
   deputy: Deputy
   deputy_id: Deputy
+  error: Fehler
   function: Function
   logout: Logout
   name: Name
@@ -318,6 +319,7 @@ en:
       token:
         one: Token
         other: Tokens
+        waiting: Waiting Tokens
       token_status:
         one: Token Status
         other: Token Statuses
